<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#8000">

    <TextView
        android:id="@+id/ya_qiang_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_qiang"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/shi_du_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kong_qi_shi_du"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/ya_qiang_text"
        app:layout_constraintRight_toLeftOf="@+id/feel_temp_text" />

    <TextView
        android:id="@+id/feel_temp_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_gan_wen_du"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/ya_qiang_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ya_qiang_text"
        app:layout_constraintRight_toRightOf="@+id/ya_qiang_text"
        app:layout_constraintLeft_toLeftOf="@+id/ya_qiang_text" />

    <TextView
        android:id="@+id/shi_du_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/shi_du_text"
        app:layout_constraintRight_toRightOf="@+id/shi_du_text"
        app:layout_constraintLeft_toLeftOf="@+id/shi_du_text" />

    <TextView
        android:id="@+id/feel_temp_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/feel_temp_text"
        app:layout_constraintLeft_toLeftOf="@+id/feel_temp_text"
        app:layout_constraintRight_toRightOf="@+id/feel_temp_text" />

    <TextView
        android:id="@+id/air_qlt_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kong_qi_zhi_liang"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/ya_qiang_value"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="@+id/ya_qiang_text"
        app:layout_constraintLeft_toLeftOf="@+id/ya_qiang_text" />

    <TextView
        android:id="@+id/pm25_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm2_5"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/air_qlt_text"
        app:layout_constraintLeft_toLeftOf="@+id/shi_du_text"
        app:layout_constraintRight_toRightOf="@+id/shi_du_text" />

    <TextView
        android:id="@+id/pm10_text"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm10"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/air_qlt_text"
        app:layout_constraintRight_toRightOf="@+id/feel_temp_text"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/feel_temp_text" />

    <TextView
        android:id="@+id/air_qlt_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/air_qlt_text"
        app:layout_constraintRight_toRightOf="@+id/air_qlt_text"
        app:layout_constraintLeft_toLeftOf="@+id/air_qlt_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/pm25_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/pm25_text"
        app:layout_constraintRight_toRightOf="@+id/pm25_text"
        app:layout_constraintLeft_toLeftOf="@+id/pm25_text"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/pm10_value"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/pm10_text"
        app:layout_constraintRight_toRightOf="@+id/pm10_text"
        app:layout_constraintLeft_toLeftOf="@+id/pm10_text"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>